metrics for ann

--- a/Volume 1 - Supervised Deep Learning/Part 1 - Artificial Neural Networks (ANN)/artificial_neural_network.ipynb
+++ b/Volume 1 - Supervised Deep Learning/Part 1 - Artificial Neural Networks (ANN)/artificial_neural_network.ipynb
@@ -710,6 +710,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 48ms/step\n",
+            "[[False]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# always remember to re-apply feature scaling to the observation you want to predict using transform\n",
+        "print(model.predict(sc.transform([[1, 0, 0, 600, 1, 40, 3, 60000, 2, 1, 1, 50000]])) > 0.5)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -734,6 +753,32 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\u001b[1m63/63\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step   \n",
+            "[[0 0]\n",
+            " [0 1]\n",
+            " [0 0]\n",
+            " ...\n",
+            " [0 0]\n",
+            " [0 0]\n",
+            " [0 0]]\n"
+          ]
+        }
+      ],
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "y_pred = (y_pred > 0.5) # convert probabilities to binary outcomes\n",
+        "print(np.concatenate((y_pred.reshape(len(y_pred), 1), y_test.reshape(len(y_test), 1)), axis=1))"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "colab_type": "text",
@@ -741,6 +786,38 @@
       },
       "source": [
         "### Making the Confusion Matrix"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[1514   81]\n",
+            " [ 196  209]]\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "0.8615"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+        "cm = confusion_matrix(y_test, y_pred)\n",
+        "\n",
+        "print(cm)\n",
+        "accuracy_score(y_test, y_pred)"
       ]
     }
   ],
